# agent-dump

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  README_zh.md  justfile  pyproject.toml  pytest.ini  ruff.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  pypi.yml  release.yml
docs/en/: CHANGELOG.md
docs/zh/: CHANGELOG.md
npm/: package.json
npm/scripts/: smoke-install.mjs  stage-binaries.mjs  sync-version.mjs  validate-staged-binaries.mjs  write-checksums.mjs
npm/tests/: install-binary.test.mjs  resolve-binary.test.mjs  run-agent-dump.test.mjs  sync-version.test.mjs
packaging/: entrypoint.py  pyinstaller.spec
scripts/: benchmark_scan.py
skills/agent-dump/: SKILL.md
skills/agent-dump/references/: cli-recipes.md
src/agent_dump/: __about__.py  __init__.py  __main__.py  agent_registry.py  cli.py  cli_shared.py  collect.py  collect_llm.py  collect_models.py  collect_workflow.py  config.py  db.py  diagnostics.py  export_paths.py  exporter.py  i18n.py  maintenance_workflow.py  message_filter.py  paths.py  query_filter.py  rendering.py  scanner.py  search_index.py  selector.py  session_data.py  session_workflow.py  time_utils.py  uri_support.py  uri_workflow.py
src/agent_dump/agents/: __init__.py  base.py  claudecode.py  codex.py  codex_enrichment.py  codex_patch.py  cursor.py  file_sessions.py  jsonl_scan.py  kimi.py  message_assembly.py  opencode.py  pi.py  title_fallback.py  zcode.py
tests/: conftest.py  test_cli.py  test_cli_shared.py  test_collect.py  test_collect_llm.py  test_config.py  test_db.py  test_diagnostics.py  test_export_paths.py  test_exporter.py  test_i18n.py  test_maintenance_workflow.py  test_message_filter.py  test_paths.py  test_query_filter.py  test_scanner.py  test_search_index.py  test_selector.py  test_uri_workflow.py  test_version.py
tests/test_agents/: test_base.py  test_claudecode.py  test_codex.py  test_codex_patch.py  test_contracts.py  test_cursor.py  test_jsonl_scan.py  test_kimi.py  test_message_assembly.py  test_opencode.py  test_pi.py  test_zcode.py
web/: app.js  astro.config.mjs  build-site.mjs  i18n.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  robots.txt  sitemap.xml  styles.css  tsconfig.json  version-data.js
web/public/: llms.txt  robots.txt
web/src/components/: Capabilities.astro  CopyButton.tsx  Faq.tsx  FaqSection.astro  Footer.astro  Header.astro  Hero.astro  InstallSection.astro  InstallTabs.tsx  Landing.astro  Providers.astro  Terminal.astro  Terminal.tsx  ThemeToggle.tsx
web/src/layouts/: Base.astro
web/src/pages/: index.astro
web/src/pages/zh/: index.astro
web/src/styles/: global.css
web/zh/: index.html
