[project]
name = "agent-dump"
version = "0.1.0"
description = "AI Coding Assistant Session Export Tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "XingKaiXin", email = "xingkaixin@gmail.com" },
]
keywords = ["ai", "chat", "export", "opencode", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "prompt-toolkit>=3.0.0",
    "questionary>=2.1.1",
]

[project.urls]
Homepage = "https://github.com/xingkaixin/agent-dump"
Repository = "https://github.com/xingkaixin/agent-dump"
Issues = "https://github.com/xingkaixin/agent-dump/issues"

[project.scripts]
agent-dump = "agent_dump.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_dump"]

[tool.pyright]
pythonVersion = "3.14"
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".git",
    ".venv",
]
defineConstant = { DEBUG = true }
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
