[project]
name = "agent-dump"
version = "0.2.0"
description = "AI Coding Assistant Session Export Tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "XingKaiXin", email = "xingkaixin@gmail.com" },
]
keywords = ["ai", "chat", "export", "opencode", "cli"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "inquirer>=3.4.1",
    "prompt-toolkit>=3.0.0",
    "questionary>=2.1.1",
]

[project.urls]
Homepage = "https://github.com/xingkaixin/agent-dump"
Repository = "https://github.com/xingkaixin/agent-dump"
Issues = "https://github.com/xingkaixin/agent-dump/issues"

[project.scripts]
agent-dump = "agent_dump.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_dump"]

[tool.pyright]
pythonVersion = "3.14"
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".git",
    ".venv",
]
defineConstant = { DEBUG = true }
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
